# https---github.com-calculation-methods-prudnikova

./: CMakeLists.txt  PLIC.cpp  PLIC.h  approximation.cpp  approximation.h  area.cpp  area.h  assemble.cpp  assemble.h  flux.cpp  flux.h  grids.cpp  grids.h  input.txt  linear.cpp  linear.h  main.cpp  matrix.txt  operations.cpp  operations.h  out.txt  poly.cpp  poly.h  printfile.cpp  printfile.h  readfile.cpp  readfile.h  structures.cpp  structures.h
tests/: CMakeLists.txt  PLIC.cpp  area.cpp  linear.cpp
